<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F8FA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"

                app:toolbarId="@+id/toolbar">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.051" />

                    <TextView
                        android:id="@+id/topic_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/empty_string"
                        android:textSize="34sp"
                        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/toolbar" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="498dp"


            android:background="#00421010"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            tools:ignore="SpeakableTextPresentCheck">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragmentContainerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight = "1"
            android:background="#8181ED"
            android:backgroundTint="#F9F9FA"
            android:backgroundTintMode="multiply"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:showDividers="middle"
            android:divider="@drawable/divider"
            >

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/topic_add_file_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:backgroundTint="@color/purple_500"
                app:srcCompat="@drawable/plus_icon"
                android:focusable="true"
                android:contentDescription="@string/topic_description_add_file" />

            <EditText
                android:id="@+id/topic_message_input"
                android:layout_width="208dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edit_text"
                android:backgroundTint="#F4F3F3"
                android:backgroundTintMode="src_atop"
                android:ems="10"
                android:hint="@string/topic_description_send_message"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/empty_string"
                android:textAlignment="center"
                tools:ignore="LabelFor" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/topic_send_message_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:fabCustomSize="30dp"
                app:srcCompat="@android:drawable/ic_menu_send"
                android:focusable="true"
                android:contentDescription="@string/topic_description_send_message" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/topic_take_photo_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:srcCompat="@drawable/android_camera"
                android:focusable="true"
                android:contentDescription="@string/topic_description_take_photo" />
        </LinearLayout>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>